--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/ricardo-hdz/mxn_rate/issues"
   },
-  "homepage": "https://github.com/ricardo-hdz/mxn_rate#readme"
+  "homepage": "https://github.com/ricardo-hdz/mxn_rate#readme",
+  "dependencies": {
+    "ask-sdk": "^2.0.6",
+    "request": "^2.99.99",
+    "request-promise": "^4.2.2"
+  }
 }
